--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,75 +1,54 @@
 {
-  "name": "phaser-ce-angular-cli-boilerplate",
-  "version": "1.0.0",
-  "author": "Craig Beswetherick <https://github.com/GrindheadGames>",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "webpack-dev-server --port=4200",
-    "build": "webpack",
-    "test": "karma start ./karma.conf.js",
-    "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "core-js": "^2.4.1",
-    "expose-loader": "^0.7.4",
-    "phaser-ce": "^2.9.4",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "webpack-merge": "^4.1.1",
-    "webpack-dev-server": "~2.9.3",
-    "webpack": "~3.10.0",
-    "autoprefixer": "^6.5.3",
-    "css-loader": "^0.28.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.29.0",
-    "less-loader": "^4.0.5",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.1.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.1",
-    "url-loader": "^0.6.2",
-    "circular-dependency-plugin": "^4.2.1",
-    "copy-webpack-plugin": "^4.1.1",
-    "uglifyjs-webpack-plugin": "~1.1.2"
-  }
+    "name": "PhaserES6Webpack",
+    "version": "1.2.1",
+    "description": "",
+    "author": "leandro cabrera <leandcabrera@gmail.com>",
+    "main": "index.js",
+    "scripts": {
+        "dev": "webpack",
+        "deploy": "webpack --config webpack.production.config.js",
+        "cordova": "webpack --config webpack.cordova.config.js",
+        "test": "eslint './src/**/*.js'"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@orange-games/phaser-input": "^2.0.5",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^8.2.1",
+        "babel-loader": "^7.1.2",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "browser-sync": "^2.23.6",
+        "browser-sync-webpack-plugin": "^2.0.1",
+        "clean-webpack-plugin": "^0.1.18",
+        "copy-webpack-plugin": "^4.4.1",
+        "cordova": "^8.0.0",
+        "eslint": "^4.17.0",
+        "eslint-config-standard": "^10.2.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-node": "^6.0.0",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-standard": "^3.0.1",
+        "expose-loader": "^0.7.4",
+        "html-webpack-plugin": "^2.30.1",
+        "webpack": "^3.11.0"
+    },
+    "dependencies": {
+        "cordova-android": "^7.0.0",
+        "cordova-browser": "^5.0.3",
+        "cordova-ios": "^4.5.4",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "phaser-ce": "^2.10.0",
+        "webfontloader": "^1.6.28"
+    },
+    "cordova": {
+        "platforms": [
+            "android",
+            "browser",
+            "ios"
+        ],
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        }
+    }
 }
